* Allow https-URLs for the archiso_http_srv option by disabling certificate checks
* Don't waste ram when using the archiso_http_srv option (#56)
* mountall: run udevadm settle to mount newly opened cryptodisks, improve messages
* Add rclone option to the "sysconfig" scope of YAML config file, it writes a rclone.conf file

------------------------------------------------------------------------------
9.04 (2022-08-07):
-------------------------------------------------------------------------------
* "cow_label" and "cow_directory" boot options can now also be set via the YAML config file
* New "nomdlvm" boot option doesn't activate md raid and lvm devices, preventing disk writes (#272)
* Speed up boot process and fix pacman usage by using a preconfigured pacman trust database (#290)
* Improve "mountall" script: detect more partitions, ignore swap, LUKS encryption support
* Improve "mountall" script: add --readonly option, reuse empty mountpoints
* Fix DNS name resolution during the initramfs boot phase
* The "ca-trust" config option is applied to Firefox too
* Add options to the "sysconfig" scope of YAML configs: timezone, authorized_keys, bookmarks
* Fix configuration when there is no YAML file at all (e.g. when booting via PXE)
* Added packages: rclone, qemu-img, multipath-tools, unrar

------------------------------------------------------------------------------
9.03 (2022-05-28):
-------------------------------------------------------------------------------
* Updated the kernel to the Long-Term-Supported linux-5.15.43
* Added "autoterminal" to run custom scripts in dedicated consoles for user interaction
* Added "mountall" script which mounts all available disks and volumes
* Updated "sysrescuecfg" boot option to merge given files after files in sysrescue.d
* Changed YAML config file loading logic to fully merge multiple files (#254)
* Added packages: acpi, fatresize, kexec-tools, moreutils, python-pythondialog
