@@ -21,9 +21,19 @@ do
 
 done
 
+# check for missing programs
+# mkpasswd might be packaged separately from whois in the future
+for curfile in /usr/bin/mkpasswd ; \
+do
+   if ! [[ -x "${curfile}" ]]; then
+        echo "ERROR: Program ${curfile} is missing"
+        errcnt=$((errcnt + 1))
+    fi
+done
+
 if [ ${errcnt} -eq 0 ]
 then
-    echo "SUCCESS: Have not found any missing library"
+    echo "SUCCESS: Have not found any missing library or program"
     exit 0
 else
     echo "FAILURE: Have found ${errcnt} issues"
