@@ -12,6 +12,7 @@ https://gitlab.com/systemrescue/systemrescue-sources/-/issues/278
 * Don't waste ram when using the archiso_http_srv option (#56)
 * mountall: run udevadm settle to mount newly opened cryptodisks, improve messages
 * Add rclone option to the "sysconfig" scope of YAML config file, it writes a rclone.conf file
+* Added packages: whois (mkpasswd)
 
 ------------------------------------------------------------------------------
 9.04 (2022-08-07):
